Overlap navigation menu and dropdown menu when hovering to prevent calling of mouseleave event
fixes #472

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -13,6 +13,7 @@ h2 {
 
 .dropdown:hover .dropdown-menu {
     display: block;
+    margin-top: -2px;
 }
 
 .level a{
